Adding a table of contents (with title) to the notes PDF.

--- a/lessons/Makefile
+++ b/lessons/Makefile
@@ -19,10 +19,10 @@
 # Create a single PDF out of all known files. Must update the makefile.
 # Opted to not use recursion because I didn't actually want all README
 # files from the cookbooks
-FILES := 00-intro/README.md	01-getting-started/README.md 02-clone-remote/README.md 03-config/README.md 04-init-local/README.md 05-connect-remote/README.md 06-branches/README.md 07-tags/README.md 08-find-and-fix/README.md 09-rollback-reset/README.md 10-rebase/README.md 11-github/README.md 12-bitbucket/README.md
+FILES := title.md 00-intro/README.md	01-getting-started/README.md 02-clone-remote/README.md 03-config/README.md 04-init-local/README.md 05-connect-remote/README.md 06-branches/README.md 07-tags/README.md 08-find-and-fix/README.md 09-rollback-reset/README.md 10-rebase/README.md 11-github/README.md 12-bitbucket/README.md
 
 once :
-	pandoc $(FILES) -o README.pdf
+	pandoc $(FILES) --table-of-contents --toc-depth=2 -o README.pdf
 
 # List files to be made by finding all *.md files and appending .pdf
 # Only the looks in the current directory
